# ninetail

./: .gitignore  README.md  build_native_libs.py  cmake-chess  cmake-poker.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/main/java/: module-info.java
app/src/main/java/bot/ninetail/: package-info.java
app/src/main/java/bot/ninetail/audio/: AudioPlayerLoadResultHandler.java  AudioPlayerSendHandler.java  BotAudio.java  TrackScheduler.java  package-info.java
app/src/main/java/bot/ninetail/clients/: DanbooruClient.java  DerpibooruClient.java  E621Client.java  GelbooruClient.java  GeminiClient.java  GyateBooruClient.java  RandomFoxClient.java  Rule34Client.java  UwuifyClient.java  WeatherClient.java  package-info.java
app/src/main/java/bot/ninetail/commands/: package-info.java
app/src/main/java/bot/ninetail/core/: CommandHandler.java  DatabaseHandler.java  LogLevel.java  Logger.java  Main.java  Ninetail.java  ResponseHandler.java  package-info.java
app/src/main/java/bot/ninetail/game/: Engine.java  GameManager.java  package-info.java
app/src/main/java/bot/ninetail/social/: CoinsRegistry.java  package-info.java
app/src/main/resources/: INSTRUCTIONS.txt
app/src/native/chess/: CMakeLists.txt  xmake.lua
app/src/native/chess/src/: Board.cppm  CMakeLists.txt  Chess.cppm  ChessEngine.cppm  Move.cppm  Piece.cppm
app/src/native/poker/: CMakeLists.txt
app/src/native/poker/src/: CMakeLists.txt  Card.cppm  Deck.cppm  HandEvaluator.cppm  Poker.cppm  PokerEngine.cppm
app/src/test/java/bot/ninetail/: AppTest.java  NinetailTest.java
(+163 files in other folders)
